--- a/app/globals.css
+++ b/app/globals.css
@@ -9,12 +9,13 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ededed;
+    --foreground: #0a0a0a;
   }
 }
 
 body {
+  padding: 1rem; 
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
